<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_small"
    android:orientation="horizontal"
    app:cardCornerRadius="@dimen/card_corner_radius_small"
    app:cardMaxElevation="@dimen/card_elevation"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:contentPaddingBottom="@dimen/margin_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="@dimen/list_item_padding_right">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/room_id"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/list_content_margin_medium"
            android:layout_marginTop="@dimen/list_content_margin_medium"
            android:contentDescription="@string/label_building_id"
            android:maxLines="2"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/max_occupancy"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/list_content_margin_medium"
            android:contentDescription="@string/label_max_occupancy"
            android:maxLines="2"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_id" />

        <TextView
            android:id="@+id/is_occupied"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/list_content_margin_medium"
            android:contentDescription="@string/label_is_occupied"
            android:maxLines="2"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/max_occupancy" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>