<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/people_detail_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding_small">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corner_radius_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardMaxElevation="@dimen/card_elevation"
        app:cardUseCompatPadding="true"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/screen_padding_medium">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/avatar_size_big"
                android:layout_height="@dimen/avatar_size_big"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/people_name"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:contentDescription="@string/label_list_name"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"

                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar" />


            <TextView
                android:id="@+id/job_title"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:contentDescription="@string/label_job_title"
                android:gravity="center_horizontal"
                android:maxLines="2"
                android:text="place holder"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/people_name" />


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?attr/colorSecondary"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/job_title"
                android:layout_marginTop="@dimen/margin_medium"
                app:cardMaxElevation="@dimen/card_elevation"
                app:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:orientation="vertical"
                    android:padding="@dimen/screen_padding_small">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/employee_id"
                        style="@style/CustomBody3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:contentDescription="@string/label_emp_id"
                        android:text="Place Holder" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/email"
                        style="@style/CustomBody3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:contentDescription="@string/label_email"
                        android:text="Place Holder" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/fav_color"
                        style="@style/CustomBody3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:contentDescription="@string/label_fav_color"
                        android:text="Place Holder" />


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>